# HuRI_paper

./: .gitignore  README.md  requirements.txt
Fig4a/: Figure4a.R
data/processed/: Supplementary Table 1.txt  Supplementary Table 10.txt  Supplementary Table 11.txt  Supplementary Table 12.txt  Supplementary Table 14.txt  Supplementary Table 15.xls  Supplementary Table 18.txt  Supplementary Table 2.txt  Supplementary Table 21.txt  Supplementary Table 24.txt  Supplementary Table 25.txt  Supplementary Table 26.txt  Supplementary Table 26.xlsx  Supplementary Table 28.txt  Supplementary Table 3.txt  Supplementary Table 4.txt  Supplementary Table 5.txt  Supplementary Table 6.txt  Supplementary Table 7.xls  Supplementary Table 9.txt  lit_bm_17_with_date.tsv  number_publications_per_gene.tsv  validation_merged.tsv  validation_processed.tsv
degree_correlations/: m01_correlation.m  m02_correlation_partial.m  m06_correlation_properties.m
fantom_data_processing/: FANTOM5_tpm.py  code_instructions.txt
notebooks/: .Rhistory  CG_TiP_PPI_drawing_classes.py  GTEx_TiP_characterization.ipynb  GTEx_generate_file_per_subtype.R  PPI_coannot_overlap_calculations.py  PPI_fctPSN_overlap_calculations.py  TiP_network_closeness.py  apoptosis.ipynb  apoptosis_candidate_plots.ipynb  assay_version_sensitivity_plots.ipynb  basic_functions.py  causal_gene_TiP_PPI_analysis.ipynb  condition_network_classes_v6.py  config.py  corum_huri.ipynb  custom_settings.py  database_utils.py  degree_betw_TiP_corr.ipynb  degree_plot.ipynb  disease_edgotype_classes.py  distance_terminus_interface_plots.ipynb  download_GTEx_data.R  draw_TiP_networks.ipynb  draw_TiP_networks.py  edgotype_classes.py  edgotyping_matrix_visualization.ipynb  extracellular_vesicles.ipynb  fct_annotation_files.py  fct_network_functions.py  fct_overlap_analysis_figures.ipynb  fraction_direct_contact.ipynb  gene_list_coverage.ipynb  generate_CSN_pickles.py  generate_GTEx_input_files.py  generate_PSNs.py  generate_TSNs.py  get_HuRI_paper_edgotyping_data.ipynb  heatmaps_corr.ipynb  huri_dataset_figures.ipynb  lit17.ipynb  (+17 more)
pdb_structure_code/direct_contacts/: README.txt  direct_contacts.r  lib_aux.r
pdb_structure_code/interface_area/: README.txt  get_iface_area.py
pdb_structure_code/number_of_contacts/: README.txt  run_script.sh  script_contacts.r
pdb_structure_code/number_of_contacts/rosa-master/: AUTHORS  Makefile.am  Makefile.in  README.md  acinclude.m4  bootstrap  config.h.in  configure  configure.ac  configure.scan
pdb_structure_code/number_of_contacts/rosa-master/doc/: Doxyfile
pdb_structure_code/number_of_contacts/rosa-master/src/: Makefile.am  Makefile.in
pdb_structure_code/number_of_contacts/rosa-master/src/rosa/: Makefile.am  Makefile.in  atom.cpp  atom.h  atomsel_driver.cpp  atomsel_driver.h  atomsel_parser.yy  atomsel_scanner.h  atomsel_scanner.ll  common.h  dbg.h  elems.cpp  elems.h  error.cpp  error.h  geometry.cpp  geometry.h  mathutil.cpp  mathutil.h  mem_shared_ptr.h  pdb.cpp  pdb.h  seqalign.cpp  seqalign.h  structure.cpp  structure.h  superpos.cpp  superpos.h  types.h  util.cpp  util.h  version.cpp  version.h
pdb_structure_code/number_of_contacts/rosa-master/src/tools/: Makefile.am  Makefile.in  align.cpp  bindinterf.cpp  contacts.cpp  distances.cpp  extractmodel.cpp  index2res.cpp  interact.cpp  interpretscontacts.cpp  mapmodels.cpp  pdbcut.cpp  pdbinfo.cpp  pdbmodify.cpp  pdbselect.cpp  rmsd.cpp  superpos.cpp  transform.cpp
pdb_structure_code/number_of_contacts/rosa-master/test/: Makefile.am  Makefile.in  test.cpp  test.h  test_atom.cpp  test_atom.sh.in  test_atomsel.cpp  test_atomsel.sh.in  test_pdbcut.cpp  test_pdbcut.sh.in  test_transform.cpp  test_transform.sh.in
pdb_structure_code/terminal_fusion/: README.txt  lib_TF_analysis.r  lib_TF_data.r  lib_TF_functions.r  lib_TF_interactome3D.r  lib_aux.py  script.r  terminal_interface_distance_part1.py  terminal_interface_distance_part2.py
